# noddy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  run_gui.sh
app/: CMakeLists.txt
app/include/: GuiNodes.h
app/src/: GuiNodes.cpp  main.cpp
bindings/: CMakeLists.txt
bindings/python/src/: module.cpp
core/: CMakeLists.txt
core/include/: Core.h  Filter.h  FilterEigen.h  Node.h  Utils.h
core/src/: Core.cpp  Filter.cpp  Node.cpp  Utils.cpp
examples/: test_lfilter.py  test_lfilter_multi.py
src/: main.cpp
tests/: CMakeLists.txt
tests/src/: test_filter.cpp  test_filterDesign.cpp  test_py.cpp  test_pybind11.cpp
